Fix for new bids not showing correctly.  Tweak to bid card.  Helper methods to give user statistics.

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -16,3 +16,15 @@ body {
   padding: 0;
   height: 150px;
 }
+
+.bidder-info {
+  border: 1px solid gray;
+  margin: 5px;
+  padding: 0 5px;
+}
+
+.bidder-info h4 {
+  margin-top: 10px;
+  padding-bottom: 5px;
+  border-bottom: 1px dotted gray;
+}
